installing bootstrap and jquery in angular

--- a/Angular/project-name/src/app/app.component.html
+++ b/Angular/project-name/src/app/app.component.html
@@ -14,3 +14,4 @@
 <label [hidden]="isMatch == true || password === ''">password do not match</label>
 <label [hidden]="isMatch == false">password matches</label>
 
+<button class="btn btn-primary">add user</button>
