--- a/Angular/project-name/src/app/app.component.html
+++ b/Angular/project-name/src/app/app.component.html
@@ -1,17 +1,5 @@
-<h1 [hidden]="username === ''">Welcome {{ username }} </h1>
-<h1 [hidden]="username !== ''">Please enter your userName</h1>
-<hr>
-<label>Username:</label>
-<input type="text" (input)="onUserNameInputChanged($event)">
-<br>
-<label> Enetr password:</label>
-<input type="text" (input)="onPasswordInputChanged($event)">
-<br>
-<label>reType passWord</label>
-<input type="password" (input)="onRetype($event)">
-<br>
+<p [class]="classes" >Testing</p>
 
-<label [hidden]="isMatch == true || password === ''">password do not match</label>
-<label [hidden]="isMatch == false">password matches</label>
 
-<button class="btn btn-primary">add user</button>
+
+
