--- a/Angular/project-name/src/app/app.component.html
+++ b/Angular/project-name/src/app/app.component.html
@@ -2,6 +2,8 @@
 <p *ngIf="isCorrect; else elseCond">ngIf true</p>
 <ng-template #elseCond>Else condition</ng-template>
 
+<app-star *ngFor="let rating of ratings" [starRating]=rating (starEventEmitter)="onStarClicked($event)"></app-star>
+
 <ng-template [ngIf]="!isCorrect">
   <p >*ngIf="true"</p>
 </ng-template>
@@ -16,3 +18,5 @@
   <app-switchcase3 *ngSwitchCase="'c'"></app-switchcase3>
   <app-switchcase4 *ngSwitchCase="'d'"></app-switchcase4>
 </div>
+
+
